test/libyul/yulSyntaxTests/period_not_as_identifier_start.yul
{ let .y:u256 }
// ----
// ParserError 2314: (6-7): Expected identifier but got '.'
